horizontal overflow issue

--- a/countries/src/assets/base.css
+++ b/countries/src/assets/base.css
@@ -51,9 +51,6 @@ svg{
   body{
     width: 100%;
   }
-  #app{
-    width: 100vw;
-  }
 }
 
 .mag-glass-icon path{
